Fix overflow type

--- a/dev/static/styles/modules/price-table.sass
+++ b/dev/static/styles/modules/price-table.sass
@@ -1,6 +1,6 @@
 .price-table__list
     display: flex
-    overflow-x: scroll
+    overflow-x: auto
     -webkit-overflow-scrolling: touch
     overflow-scrolling: touch
 
